--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+        <script src="https://kit.fontawesome.com/865cc0e0fe.js" crossorigin="anonymous"></script>
+
     
     
     <title>Alarm</title>
@@ -14,8 +16,8 @@
 <body>
     <div class="container">  
         <span class="clockanimation">
-            <img src="pinkclock.png"  id="clockImg" alt="clock">
-        </span>
+            <i class="fa-regular fa-clock"></i>
+                 </span>
         <h1 id="currTime">00:00:00 PM</h1>
 
         <!-- set values for alarm -->
