--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-        <script src="https://kit.fontawesome.com/865cc0e0fe.js" crossorigin="anonymous"></script>
+<!--         <script src="https://kit.fontawesome.com/865cc0e0fe.js" crossorigin="anonymous"></script> -->
 
     
     
@@ -16,7 +16,7 @@
 <body>
     <div class="container">  
         <span class="clockanimation">
-            <i class="fa-regular fa-clock"></i>
+<!--             <i class="fa-regular fa-clock"></i> -->
                  </span>
         <h1 id="currTime">00:00:00 PM</h1>
 
